# ssb-nudb-use

./: .cookiecutter.json  .cruft.json  .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md  SECURITY.md  noxfile.py  pyproject.toml  sonar-project.properties
.github/workflows/: constraints.txt  tests.yml
docs/: conf.py  index.md  nudb_use.datasets.microdata_variables.rst  nudb_use.datasets.rst  nudb_use.exceptions.rst  nudb_use.metadata.nudb_config.rst  nudb_use.metadata.nudb_klass.rst  nudb_use.metadata.rst  nudb_use.paths.rst  nudb_use.quality.rst  nudb_use.quality.specific_variables.rst  nudb_use.variables.derive.rst  nudb_use.variables.rst  nudb_use.variables.specific_vars.rst  reference.md
src/nudb_use/: CLEANUP.md  __init__.py  __main__.py  config.py  nudb_logger.py
src/nudb_use/datasets/: __init__.py  avslutta.py  bof.py  bu_igang.py  eksamen.py  external.py  igang.py  macros.py  microdata.py  non_view_test_table.py  nudb_data.py  nudb_database.py  nudb_datasets.py  nudb_read_parquet.py  nuskat.py  old_nudb_data.py  person.py  snrkat.py  sosbak.py  utd_foreldres_utdnivaa.py  utd_hoeyeste.py  utils.py  vof.py
src/nudb_use/datasets/microdata_variables/: __init__.py  utd_hoeyeste_nus2000.py
src/nudb_use/exceptions/: __init__.py  exception_classes.py  groups.py
src/nudb_use/metadata/: __init__.py
src/nudb_use/metadata/external_apis/: brreg_api.py  skolereg.py
src/nudb_use/metadata/nudb_config/: __init__.py  find_var_missing.py  get_dataset_info.py  get_dtypes.py  get_variable_info.py  map_get_dtypes.py  set_options.py  variable_names.py
src/nudb_use/metadata/nudb_klass/: __init__.py  codes.py  correspondence.py  klass_utils.py  labels.py  variants.py
src/nudb_use/paths/: __init__.py  latest.py  path_date.py  path_parse.py  path_utils.py  paths_validate.py
src/nudb_use/quality/: .widths.py.swp  IDEAS.md  __init__.py  check_bool_string_columns.py  check_drop_cols.py  colored_views.py  dtypes.py  duplicated_columns.py  missing.py  outdated_variables.py  suite.py  thresholds.py  values.py  widths.py
src/nudb_use/quality/specific_variables/: __init__.py  gro_elevstatus.py  grunnskolepoeng.py  kommune.py  land.py  nus2000.py  orgnr.py  pers_id_fnr.py  run_all.py  skoleaar.py  sn07.py  snr_fnr.py  unique_per_person.py  utils.py  vg_fullfoertkode_detaljert.py
src/nudb_use/utils/: packages.py
src/nudb_use/variables/: __init__.py  checks.py  cleanup.py
src/nudb_use/variables/derive/: __init__.py  all_data_helpers.py  bof.py  derive_datasets.py  derive_decorator.py  derive_decorator_utils.py  fullfoert.py  fullfoert_foerste.py  function_factory.py  hoeyeste_utd.py  hoyeste_utd.py  klass_correspondences_and_variants.py  klass_derive_utils.py  klass_labels.py  land.py  new_in_vg.py  nus_correspondences.py  nus_variants.py  person.py  person_idents.py  pick_id_col.py  registrert.py  registrert_foerste.py  skoleaar.py  uh.py  uh_univ_eller_hoegskole.py  uh_univ_eller_hogskole.py  utd_foreldres_utdnivaa.py  utd_hoeyeste.py  utd_skoleaar.py  utils.py  vof.py
src/nudb_use/variables/specific_vars/: __init__.py  kommuner.py  orgnr.py  snr.py
src/nudb_use/variables/var_utils/: duped_columns.py  find_var.py  pick_id_col.py
tests/: __init__.py  conftest.py  generate_test_data.py  test_functions.py  test_generate_data.py  test_main.py  test_nudb_logger.py  utils.py
tests/datasets/: test_bof.py  test_nudbdata.py
tests/exceptions/: __init__.py  test_exception_classes.py  test_groups.py
tests/metadata/: __init__.py
tests/metadata/external_apis/: __init__.py  test_brreg_api.py  test_skolereg.py
tests/metadata/nudb_config/: __init__.py  test_find_var.py  test_find_var_missing.py  test_get_dataset_info.py  test_get_dtypes.py  test_get_variable_info.py  test_map_get_dtypes.py  test_set_options.py  test_variable_names.py
tests/metadata/nudb_klass/: __init__.py  test_codes.py  test_klass_utils.py
tests/paths/: __init__.py  test_latest.py  test_path_parse.py  test_path_utils.py  test_paths_path_date.py  test_paths_validate.py
tests/quality/: __init__.py  test_bool_string_columns.py  test_check_drop_cols.py  test_colored_views.py  test_dtypes.py  test_duplicated_columns.py  test_missing.py  test_outdated_variables.py  test_thresholds.py  test_values.py  test_widths.py
tests/quality/specific_variables/: __init__.py  test_orgnr.py  test_skoleaar.py  test_vg_fullfoertkode_detaljert.py
tests/utils/: __init__.py  generate_test_data.py  test_packages.py  validate_errors.py
tests/utils_testing/: __init__.py  generate_test_data.py  mutate_codelist.py  validate_errors.py
tests/variables/: __init__.py  test_checks.py  test_cleanup.py
tests/variables/derive/: __init__.py  test_all_data_helpers.py  test_bof.py  test_derive_decorator_utils.py  test_derive_nus.py  test_derive_nus_variants.py  test_existance_of_derivation_functions.py  test_fullfoert.py  test_fullfoert_foerste.py  test_land.py  test_person.py  test_person_idents.py  test_pick_id_col.py  test_registrert.py  test_registrert_foerste.py  test_skoleaar.py  test_uh.py  test_uh_univ_eller_hogskole.py
tests/variables/specific_vars/: test_kommuner.py  test_orgnr.py  test_snr.py
tests/variables/var_utils/: __init__.py  test_pick_id_col.py
