[project]
name = "ssb-nudb-use"
version = "2026.1.0"  # Year.Month.Patch - So the last number is not day of month, but patch number within month
description = "NUDB Use - is a usage-package for the Norwegian National Education Database cloud-data. Both for data-consumers and data-deliverers"
authors = [{ name = "Carl F. Corneil", email = "cfc@ssb.no" }, { name = "Kjell Slupphaug", email = "pph@ssb.no" }, { name = "Markus Storeide", email = "rku@ssb.no" }]
maintainers = [{ name = "Statistics Norway, Education statistics Department (360)" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["classifiers"]
dependencies = [
    "ssb-klass-python >=1.0.4",
    "pandas >=2.3.3",
    "ssb-fagfunksjoner >=1.1.2; python_version >= '3.11' and python_version < '4.0'",
    "pydantic >=2.12.4",
    "brreg >=1.3.0",
    "requests >=2.32.5",
    "ssb-nudb-config >=2026.1.1"
]

[project.urls]
homepage = "https://github.com/statisticsnorway/ssb-nudb-use"
repository = "https://github.com/statisticsnorway/ssb-nudb-use"
documentation = "https://statisticsnorway.github.io/ssb-nudb-use"
Changelog = "https://github.com/statisticsnorway/ssb-nudb-use/releases"

[tool.poetry]
classifiers = ["Development Status :: 3 - Alpha"]
requires-poetry = ">=2.0"
packages = [{ include = "nudb_use", from = "src" }]

[tool.poetry.group.dev.dependencies]
pygments = ">=2.10.0"
black = { extras = ["jupyter"], version = ">=23.1.0" }
coverage = { extras = ["toml"], version = ">=6.2" }
furo = ">=2021.11.12"
mypy = ">=0.930"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pydoclint = { version = ">=0.8.3" }
ruff = ">=0.0.284"
pytest = ">=6.2.5"
sphinx = ">=6.2.1"
sphinx-autobuild = ">=2021.3.14"
sphinx-autodoc-typehints = ">=1.24.0"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = { extras = ["colors"], version = ">=0.15.10" }
myst-parser = { version = ">=0.16.1" }
deptry = {version=">=0.23.0", python = ">=3.10, <4.0"}
colorama = ">=0.4.6"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["nudb_use", "tests"]
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 50

[tool.deptry.per_rule_ignores]
DEP001 = ["nox", "nox_poetry"]  # packages available by default

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[tool.ruff]
force-exclude = true  # Apply excludes to pre-commit
show-fixes = true
src = ["src", "tests"]
target-version = "py311"  # Minimum Python version supported
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
extend-exclude = [
    "__pycache__",
    "old",
    ".ipynb_checkpoints",
    "noxfile.py",
    "docs/conf.py"
]

# Ruff rules may be customized as desired: https://docs.astral.sh/ruff/rules/
[tool.ruff.lint]
select = [
    "A",    # prevent using keywords that clobber python builtins
    "ANN",  # check type annotations
    "B",    # bugbear: security warnings
    "D",    # documentation
    "E",    # pycodestyle
    "F",    # pyflakes
    "ISC",  # implicit string concatenation
    "I",    # sort imports
    "UP",   # alert you when better syntax is available in your python version
    "RUF",  # the ruff developer's own rules
]
ignore = [
    "ANN202", # Don't require return type annotation for private functions.
    "ANN401", # Allow type annotation with type Any.
    "D100",   # Supress undocumented-public-module. Only doc of public api required.
    "D107",   # We are of the opinion that inits dont need a docstring, when the class has one...
    "FBT001", # Allow boolean positional arguments in a function.
    "FBT002", # Allow boolean default positional arguments in a function.
    "E402",   # Supress module-import-not-at-top-of-file, needed in jupyter notebooks.
    "E501",   # Supress line-too-long warnings: trust black's judgement on this one.
    "PLR2004", # Allow to compare with unnamed numerical constants.
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pydocstyle]
convention = "google"  # You can also use "numpy".

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "validator", "root_validator", "pydantic.validator"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
"**/tests/*" = [
    "ANN001",  # type annotations don't add value for test functions
    "ANN002",  # type annotations don't add value for test functions
    "ANN003",  # type annotations don't add value for test functions
    "ANN201",  # type annotations don't add value for test functions
    "ANN204",  # type annotations don't add value for test functions
"ANN205",  # type annotations don't add value for test functions
"ANN206",  # type annotations don't add value for test functions
"D100",    # docstrings are overkill for test functions
"D101",
"D102",
"D103",
"S101",    # asserts are encouraged in pytest
]
"src/nudb_use/variables/derive/*.py" = ["RUF100"]  # If we dont have this RUFF strips our inlined noqas for pydoclint

[tool.pydoclint]
style = "google"
arg-type-hints-in-docstring = false
native-mode-noqa-location = "definition"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
